# PD

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  300-900-XTable-Li.npy  300-900-XTable-Mg.npy  300-900-phiTable-Li.npy  300-900-phiTable-Mg.npy  CE training3.ipynb  CHANGELOG.md  CONTRIBUTING.md  KianCalculator.py  Li-XTable-averaged.npy  Li-phiTable-averaged.npy  Li2Mg22_ID_62_scf_1.pwi.pwo  LiMg-example-0.4-100relax.yaml  LiMg-example-0.4-10relax.yaml  LiMg-example-0.4-20relax.yaml  LiMg-example-0.4-500relax.yaml  LiMg-example-0.6-5000relax.yaml  LiMg-example-0.8-5000relax.yaml  LiMg-example.yaml  LiMg-hcp-train-stress-chg.db  LiNa-example.yaml  MANIFEST.in  Makefile  Mg-XTable-averaged.npy  Mg-phiTable-averaged.npy  README.md  appveyor.yml  asdf.db  asdf.ipynb  asdf.py  bccN.npy  bccX.npy  committee.py  convex_hull.py  drawpd.py  (+32 more)
solid/: .clang-format  .pylintrc  .readthedocs.yaml  300-900-XTable-Li.npy  300-900-XTable-Mg.npy  360-600-XTable-Li.npy  360-600-XTable-Mg.npy  370-590-phiTable-Li.npy  370-590-phiTable-Mg.npy  IsingCalculator.py  LTE-XTable-Li.npy  LTE-phiTable-Li.npy  LTE-phiTable-Mg.npy  LiMg-Sep8-first-Batch-hcp.db-eci.json  LiNa-eci.json  XTable-Li.npy  asdf.py  clease-heat-Capacity.py  emc.py  example.yaml  finer-XTable-Li.npy  finer-phiTable-Mg.npy  lina-XTable-Li.npy  lina-XTable-Mg.npy  lina-phiTable-Li.npy  lina-phiTable-Mg.npy  lina-phiTable-Na.npy  mypy.ini  phb3.py  right.csv  setup.cfg  setup.py  tryClease.ipynb  tryCleaseWEIM.py  wtf-phiTable-Li.npy
solid/0.25to-0.25/: 300-900-XTable-Mg.npy  300-900-phiTable-Li.npy  300-900-phiTable-Mg.npy
solid/0.80x-LiKCl-chgnet-0.3.0-cell-relaxed/: initial-npt.in  log.lammps  structure.ready  structure.ready.data
solid/1/: 300-900-phiTable-Li.npy
solid/EAM/: AuCu_Zhou04.eam.alloy  EAM.input.AuCu  Zhou04_EAM_2
solid/LTE0-900/: 300-900-XTable-Li.npy  300-900-phiTable-Li.npy  300-900-phiTable-Mg.npy
solid/LiMg/: LiMg-Oct26-7-hcp-updated-lowE.db-eci.json  LiMg-Oct26-8-bcc-updated-lowE.db-eci.json  LiMg-Oct26-8-bcc-updated.db-eci.json  LiMg-Oct26-bcc-updated.db-eci.json  (+2 more)
(+3475 files in other folders)
