[metadata]
name = clease
author = J. H. Chang, D. Kleiven, A. S. Tygesen
author_email = jchang@dtu.dk, david.kleiven@ntnu.no, alexty@dtu.dk
version = file: clease/_version.txt
description = CLuster Expansion in Atomistic Simulation Environment
license = MPL-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/computationalmaterials/clease/
project_urls =
    Documentation = https://clease.readthedocs.io/
    Source = https://gitlab.com/computationalmaterials/clease/
keywords =
    Cluster Expansion
    Monte Carlo
    Computational materials
    Materials research
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages=find:
python_requires = >=3.7
include_package_data = true
install_requires =
    ase>=3.22
    numpy
    cython
    matplotlib
    spglib
    scikit-learn
    typing_extensions
    Deprecated
    click>=8.0.0  # CLI things
    attrs>=21.4.0
    scipy>=1.7.0  # Last minor version which allows python 3.7
    packaging  # Replaces deprecated distutils
    threadpoolctl  # For controlling parallelization of NumPy

[options.entry_points]
console_scripts =
    clease=clease.cli.main:clease_cli
